# engine

./: LICENSE  README.md  _howto_maintainpackage.txt  pyproject.toml
src/agroecogym_engine/: farm.py  field.py  make_farm.py  make_farm_new.py  run_farm.py
src/agroecogym_engine/actors/: agents.py
src/agroecogym_engine/actors/actionrules/: BasicRule.py
src/agroecogym_engine/actors/farmers/: BasicFarmer.py
src/agroecogym_engine/apis/: entity_api.py  policy_api.py  rules_api.py
src/agroecogym_engine/core/config/: build_yamls.py  naming.py  setup_manager.py
src/agroecogym_engine/core/dynamics/: simulation_core.py  state_manager.py
src/agroecogym_engine/core/spaces/: action_conversion.py  space_builder.py
src/agroecogym_engine/core/structure/: field.py  plot.py
src/agroecogym_engine/core/utils/: logging_utils.py  transitions.py  yaml.py
src/agroecogym_engine/entities/: Birds.py  Fertilizer.py  NewPlant.py  Pests.py  Plant.py  Weather.py  Weeds.py
src/agroecogym_engine/rendering/: farm_renderer.py  image_renderer.py  monitoring.py  monitoring_utils.py  text_renderer.py  utils.py  variable_viewer.html
src/agroecogym_engine/scores/: BasicScore.py  reward_functions.py
src/agroecogym_engine/specifications/: newplant_specifications.yaml  specification_manager.py  weather_specifications.yaml  weeds_specifications.yaml
src/agroecogym_engine/utils/: python.py
tests/basicfarm/: farm.py  farm2_actions.yaml  farm2_init.yaml
tests/game_agents/: basic_agents.py
tests/game_builder/: check_gym_env.py  make_farm.py  run_farm.py
(+50 files in other folders)
